--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.14.2</version>
         </dependency>
+        <dependency>
+            <groupId>io.xiandan</groupId>
+            <artifactId>gson-ktx</artifactId>
+            <version>1.0.2</version>
+        </dependency>
 
     </dependencies>
 
