--- a/pom.xml
+++ b/pom.xml
@@ -138,7 +138,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.institute/com.example.institute.Institute</mainClass>
+                            <mainClass>com.example.institute/com.example.institute.InstituteApplication</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
